Added : Required Column and functions
